<?xml version="1.0"?>
<package format="3">
  <name>depth_rois_fusion</name>
  <version>0.0.1</version>
  <description>Depth image fusion from LiDAR and camera using ROIs.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- Required dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>OpenCV</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tier4_perception_msgs</depend>

  <!-- Required for C++ -->
  <exec_depend>Eigen3</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>

